Moved Validation to a single funtion
Moved validation to a single function, and corrected error with worker function not being called

--- a/Sail Calculator/CSS - SailCalc.css
+++ b/Sail Calculator/CSS - SailCalc.css
@@ -1,3 +1,7 @@
+html{
+	background: yellow;
+}
+
 h2{
 	text-align: center;
 	color: red;
@@ -8,6 +12,13 @@ h2{
 .content{
 	display: flex;
 	align-items: center;
+}
+
+.validationresult{
+	font-weight: bold;
+	color: red;
+	padding: 1rem;
+	text-align: center;
 }
 
 .form{
